# Skila

./: .gitignore  AUTHOR  CHANGELOG  CMakeLists.txt  README.md  init_documentation.sh  run_all.sh  run_application.sh  run_profile.sh  run_tests.sh
build_info/: build_name.txt
includes/: CMakeLists.txt  Coordinate.h  IndexBuffer.h  MatrixOperations.h  Object.h  Renderer.h  Skila.h  TestingClass.h  VertexBuffer.h
lib/glew-2.1.0/lib/: libGLEW.so.2.1.0
lib/glew-2.1.0/lib/Debug/x64/: glew32d.exp
lib/glew-2.1.0/lib/Release/Win32/: glew32.exp
lib/glew-2.2.0/: glew.pc
lib/glew-2.2.0/lib/Debug/Win32/: glew32d.exp
lib/glew-2.2.0/lib/Release/x64/: glew32.exp
res/shaders/: basic.shader
src/: CMakeLists.txt  Coordinate.cpp  IndexBuffer.cpp  MatrixOperations.cpp  Object.cpp  Renderer.cpp  Skila.cpp  TestingClass.cpp  VertexBuffer.cpp  main.cpp
tests/: CMakeLists.txt  tests_coordinate.cpp  tests_main.cpp  tests_matrix_operations.cpp  tests_object.cpp
